began working on AI Overview labels in "People also ask" + fixed show overview button overlapping other controls

--- a/popup/index.html
+++ b/popup/index.html
@@ -48,6 +48,46 @@
                     value="visible"
                 />
             </label>
+
+            <br />
+
+            <legend>
+                <h2>AI in "People also ask"</h2>
+            </legend>
+
+            <div class="center">
+                <img src="" alt="AI People Also Ask Display Preview" />
+            </div>
+
+            <label for="peopleAlsoAskHide">
+                <h3>Hide</h3>
+                <input
+                    type="radio"
+                    name="peopleAlsoAskDisplay"
+                    id="peopleAlsoAskHide"
+                    value="hide"
+                />
+            </label>
+
+            <label for="peopleAlsoAskCondensed">
+                <h3>Labelled</h3>
+                <input
+                    type="radio"
+                    name="peopleAlsoAskDisplay"
+                    id="peopleAlsoAskCondensed"
+                    value="labelled"
+                />
+            </label>
+
+            <label for="peopleAlsoAskVisible">
+                <h3>Normal</h3>
+                <input
+                    type="radio"
+                    name="peopleAlsoAskDisplay"
+                    id="peopleAlsoAskVisible"
+                    value="normal"
+                />
+            </label>
         </form>
     </body>
 </html>
