--- a/popup/index.html
+++ b/popup/index.html
@@ -1,93 +1,13 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Better AI Overview Extension</title>
-        <link rel="stylesheet" href="styles.css" />
-        <script defer type="module" src="script.js"></script>
-    </head>
-    <body>
-        <!-- <h1>AI Overview Settings</h1> -->
-
-        <form id="overviewSettings">
-            <legend>
-                <h2>Display Settings</h2>
-            </legend>
-
-            <div class="center">
-                <img src="" alt="AI Overview Display Preview" />
-            </div>
-
-            <label for="overviewHide">
-                <h3>Hide</h3>
-                <input
-                    type="radio"
-                    name="overviewDisplay"
-                    id="overviewHide"
-                    value="hide"
-                />
-            </label>
-
-            <label for="overviewCondensed">
-                <h3>Condensed</h3>
-                <input
-                    type="radio"
-                    name="overviewDisplay"
-                    id="overviewCondensed"
-                    value="condensed"
-                />
-            </label>
-
-            <label for="overviewVisible">
-                <h3>Visible</h3>
-                <input
-                    type="radio"
-                    name="overviewDisplay"
-                    id="overviewVisible"
-                    value="visible"
-                />
-            </label>
-
-            <br />
-
-            <legend>
-                <h2>AI in "People also ask"</h2>
-            </legend>
-
-            <div class="center">
-                <img src="" alt="AI People Also Ask Display Preview" />
-            </div>
-
-            <label for="peopleAlsoAskHide">
-                <h3>Hide</h3>
-                <input
-                    type="radio"
-                    name="peopleAlsoAskDisplay"
-                    id="peopleAlsoAskHide"
-                    value="hide"
-                />
-            </label>
-
-            <label for="peopleAlsoAskCondensed">
-                <h3>Labelled</h3>
-                <input
-                    type="radio"
-                    name="peopleAlsoAskDisplay"
-                    id="peopleAlsoAskCondensed"
-                    value="labelled"
-                />
-            </label>
-
-            <label for="peopleAlsoAskVisible">
-                <h3>Normal</h3>
-                <input
-                    type="radio"
-                    name="peopleAlsoAskDisplay"
-                    id="peopleAlsoAskVisible"
-                    value="normal"
-                />
-            </label>
-        </form>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>popup</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
